--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,71 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html{
+  box-sizing: border-box;
+  
+}
+*,*::berfore,*::after{
+  box-sizing: inherit;
+}
+body{
+  background-color: #f2f2f2;
+}
+/*Header*/
+div.hero{
+  background-image: url(../img/encabezado.jpg);
+  height: 100vh;/*ancho y alto de la pantalla*/
+  background-position: top center;
+  background-size: cover;/*Centrar imagen de fondo*/
 
+}
+div.contenido-header{/*en dispositivo pequeño*/
+  padding-top: 40px;
+}
+@media only screen and (min-width:768px){/*Dispositivo grande*/
+  div.contenido-header{
+    padding-top: 10px;
+  }
+}
+nav.redes-sociales{
+  text-align: center;
+}
+nav.redes-sociales a{
+  color: white;
+  font-size: 2em;
+  margin-right: 20px;
+}
+nav.redes-sociales a:last-child{
+  margin-right: 0;
+}
+div.informacion-evento{
+  text-align: center;
+  color: white;
+}
+@media only screen and (min-width:768px){
+  div.informacion-evento{
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+}
+div.informacion-evento p{
+  margin: 0;
+  display: inline;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+div.informacion-evento p i{
+  color:#fe4918;  
+}
+p.fecha{/*separar elementos*/
+  float: left;
+}
+p.ciudad{
+  float: right;
+  text-align: right;/*cargar a la derecha*/
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
