--- a/css/main.css
+++ b/css/main.css
@@ -97,16 +97,106 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-html{
+html {
   box-sizing: border-box;
-  
 }
-*,*::berfore,*::after{
+*, *:before, *:after {
   box-sizing: inherit;
 }
 body{
   background-color: #f2f2f2;
+  font-family: 'Open Sans',sans-serif;
 }
+h2{
+  font-family: 'Oswald',sans-serif;
+  text-transform: uppercase;
+  font-size: 2.4em;
+  text-align: center;
+}
+h2::after{
+  content:'';
+  margin: 0 auto;
+  background-image: url(../img/separador.png);
+  display: block;
+  height: 30px;
+  width: 100px;
+}
+h3{
+  color: #fe4918;
+  font-size: 1.4em;
+  font-family: 'PT Sans',sans-serif;
+  margin: 0;
+}
+.button{
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #fe4918;
+  transition: all .3s ease;
+  border: 2px solid #fe4918;
+}
+.button:hover{
+  background-color: #e33000;
+  border: 2px solid #e33000;
+}
+.button.hollow{
+  background-color: white;
+  color: #fe4918;
+  
+}
+.button.hollow:hover{
+  background-color: gainsboro;
+}
+.float-left{
+  float: left;
+}
+.float-right{
+  float: right;
+}
+.contenedor{
+  width: 98%;
+  margin: 0 auto;
+}
+.seccion{
+  padding: 30px 0; 
+}
+.seccion p{
+  font-size: 1.2em;
+  text-align: center;
+}
+a{
+  text-decoration: none;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+img{
+  width: 100%;
+}
+@media(min-width:480px){
+  .contenedor{
+    width: 95%;
+  }
+}
+@media(min-width:768px){
+  .contenedor{
+    width: 90%;
+  }
+}
+@media(min-width:992px){
+  .contenedor{
+    width: 90%;
+    max-width: 1100px;
+  }
+}
+
 /*Header*/
 div.hero{
   background-image: url(../img/encabezado.jpg);
@@ -154,6 +244,7 @@ div.informacion-evento p{
 
 div.informacion-evento p i{
   color:#fe4918;  
+  font-size: 2rem;
 }
 p.fecha{/*separar elementos*/
   float: left;
@@ -161,6 +252,324 @@ p.fecha{/*separar elementos*/
 p.ciudad{
   float: right;
   text-align: right;/*cargar a la derecha*/
+}
+p.slogan{
+  text-transform: none!important;
+}
+p.slogan span{
+  font-weight: bold;
+}
+h1.nombre-sitio{
+  font-family: 'PT-Sans',sans-serif;
+  font-size: 5.9vw;
+  text-transform: uppercase;
+}
+@media(min-width:768px){
+  h1.nombre-sitio{
+    font-size: 8.5vw;
+    margin: 0;
+    line-height: 1;
+  }
+}
+.barra{
+  background-color: #353535;
+}
+div.logo{
+  width: 70%;
+  float: left;
+}
+div.logo img{/*el logo toma la medida del padre*/
+  width: 100%;
+}
+@media only screen and (min-width:768px){
+  div.logo{
+    width:33%;
+  }
+}
+/*Navegacion principal*/
+nav.navegacion-principal{
+  display: none;
+}
+nav.navegacion-principal a{
+  font-family: 'Oswald',sans-serif;
+  color: white;
+  text-decoration: none;
+  font-size: 1.4em;
+  text-transform: uppercase;
+  transition: all .5s ease; 
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+
+nav.navegacion-principal a:hover{
+  background-color: #fe4918;
+}
+nav.navegacion-principal a:last-child{
+  border: 2px solid  #fe4918;
+}
+@media only screen and (min-width:768px){
+  nav.navegacion-principal{
+    width: 67%;
+    float: right;
+    text-align: right;
+    display: block;
+    margin-top: 10px;
+  }
+  nav.navegacion-principal a{
+    margin-right: 10px;
+    padding: 5px 20px;
+    display: inline-block;
+    width: auto;
+    margin:0;
+  }
+}
+  /*menu movile*/
+  div.menu-movil{
+    width: 50px;
+    display: block;
+    float: right;
+    text-align: right;
+    margin-top: 12px;
+  }
+  div.menu-movil:hover{
+    cursor: pointer;
+  }
+  div.menu-movil span{
+    height: 8px;
+    margin-bottom: 6px;
+    background-color: white;
+    display: block;
+  }
+@media only screen and (min-width:768px){
+  div.menu-movil{
+    display: none;
+  }
+}
+/*Talleres*******************************************************************************************/
+section.programa{
+  position: relative;
+}
+div.contenedor-video{
+  max-width: 100%;
+  overflow-x: hidden;/*Si el video se sale del 100% lo oculta*/
+}
+div.contenido-programa{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+div.programa-evento{
+  background-color: rgba(255, 255, 255, .8);
+  padding: 15px;
+  margin-top: 40px;
+}
+@media only screen and (min-width:768px){
+  div.programa-evento{
+    width: 70%;
+  }
+}
+@media only screen and (min-width:992px){
+  div.programa-evento{
+    width: 50%;
+  }
+}
+nav.menu-programa{
+  width: 100%;
+  border-bottom: 1px solid #fe4918;
+  padding-bottom: 10px;
+}
+nav.menu-programa a{
+  display: block;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  font-family: 'Oswald',sans-serif;
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+nav.menu-programa a i,
+div.detalle-evento i{
+  color: #fe4918;
+  font-size: 1.2em;
+  margin-right: 10px;
+}
+@media only screen and (min-width:768px){
+  nav.menu-programa{
+    display: table;
+  }
+  nav.menu-programa a{
+    display: table-cell;
+  }
+
+}
+/*Detalle evento*/
+div.detalle-evento{
+  margin-top: 20px;
+  border-bottom: 1px solid black;
+  padding:0 20px;
+}
+div.detalle-evento p{
+  margin-bottom: 16px;
+  font-size: 16px;
+}
+div.detalle-evento:nth-child(2){
+  border: none;
+}
+
+/*Invitados**/
+ul.lista-invitados li{
+  padding: 10px;
+  float: left;
+}
+@media only screen and (min-width:480px){
+  ul.lista-invitados li{
+    width: 50%; 
+  }
+}
+@media only screen and (min-width:768px){
+  ul.lista-invitados li{
+    width: 33.3%;
+  }
+}
+div.invitado{
+  position: relative;
+  overflow: hidden;
+}
+div.invitado img{
+  filter: gray;
+  -webkit-filter: grayscale(1);
+  -webkit-transition: all .5s ease-in;
+}
+div.invitado:hover img{/*afecta a la imagen*/
+  -webkit-filter: grayscale(0);
+  -webkit-transform: scale(1.1);
+}
+div.invitado p{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  color: #fe4918;
+  padding: 10px 10px;
+  text-align: left;
+  background-color: rgba(0, 0, 0, .55);
+  width: 100%;
+  font-family: 'Oswald',sans-serif;
+  text-transform: uppercase;
+  -webkit-transition: all .5s ease-in-out;
+}
+div.invitado:hover p{/*efecta al parrafo*/
+  bottom: -80px;
+  opacity: 0;
+}
+/*Contador*************************************************************************************************************/
+.parallax::before{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  
+  -webkit-filter: brightness(.8);
+  filter: brightness(.8);
+}
+div.contador{
+  position: relative;
+  height: 500px;
+}
+@media only screen and (min-width:768px){
+  div.contador{
+    height: 350px;
+  }
+}
+div.contador:before{
+  background-image: url(../img/bg-resumen.jpg);
+  content: '';
+
+}
+ul.resumen-evento{
+  position: relative;
+  padding: 140px 0;
+}
+ul.resumen-evento li{
+  width: 50%;
+  float: left;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: 'Oswald',sans-serif;
+  font-size: 25px;
+  line-height: 1;
+  padding-bottom: 30px;
+}
+
+@media only screen and (min-width:768px){
+  ul.resumen-evento li{
+    width: 25%;
+  }
+}
+p.numero{
+  font-size: 3em;
+  line-height: 1;
+  color: #fe4918;
+  display: block;
+  margin: 0 0 10px 0;
+  font-weight: bold;
+  font-family: 'Oswald',sans-serif;
+}
+/********TABLAS DE PRECIOS*********/
+ul.lista-precios > li{
+  padding: 10px;
+}
+@media only screen and (min-width:768px){
+  ul.lista-precios > li{
+    float: left;
+    width: 33.3%;
+  }
+}
+div.tabla-precios{
+  border: 1px solid #e1e1e1;
+  background-color: white;
+  padding: 40px 0;
+  text-align: center; 
+  transition: all .3s ease;
+}
+div.tabla-precios:hover{
+  transform: scale(1.1);
+  border: 1px solid #fe4918;
+  box-shadow: 0px 0px 50px #666;
+}
+div.tabla-precios ul li{
+  font-family: 'PT Sans',sans-serif;
+  font-size: 14px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #868686;
+  line-height: 26px;
+}
+div.tabla-precios ul i{
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 5px;
+  font-size: 18px;
+  color: green;
+}
+div.tabla-precios h3{
+  font-family: 'Oswald',sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+div.tabla-precios p.numero{
+  color: black;
+  font-size: 60px;
+  margin: 20px 0;
 }
 /* ==========================================================================
    Helper classes
