--- a/css/main.css
+++ b/css/main.css
@@ -140,10 +140,7 @@ h3{
   transition: all .3s ease;
   border: 2px solid #fe4918;
 }
-.button:hover{
-  background-color: #e33000;
-  border: 2px solid #e33000;
-}
+
 .button.hollow{
   background-color: white;
   color: #fe4918;
@@ -151,6 +148,15 @@ h3{
 }
 .button.hollow:hover{
   background-color: gainsboro;
+}
+.button.transparente{
+  background-color: transparent;
+  border: 2px solid white;
+  transition: all .5s ease;
+}
+.button:hover{
+  background-color: #e33000;
+  border: 2px solid #e33000;
 }
 .float-left{
   float: left;
@@ -314,7 +320,7 @@ nav.navegacion-principal a:last-child{
     float: right;
     text-align: right;
     display: block;
-    margin-top: 10px;
+    margin: 10px 0;
   }
   nav.navegacion-principal a{
     margin-right: 10px;
@@ -570,6 +576,168 @@ div.tabla-precios p.numero{
   color: black;
   font-size: 60px;
   margin: 20px 0;
+}
+/*********************MAPA*************************************************/
+div.mapa{
+  height: 420px;
+  background-color: gold;
+}
+/*********************TESTIMONIALES*******************************************************/
+div.testinominales{
+  padding-bottom: 20px;
+}
+div.testimonial{
+  padding: 5px;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width:768px){
+  div.testimonial{
+    float: left;
+    width: 33.3%;
+  }
+}
+blockquote{
+  background-color: white;
+  border: 2px solid #e1e1e1;
+  position: relative;
+  margin: 0 0 10px 0;
+  padding-bottom: 20px;
+}
+blockquote p{
+  text-align: justify!important;
+  font-size: 1em!important;
+  font-family: 'PT Sans',sans-serif;
+  padding: 0 20px 0 65px;
+}
+blockquote p:before{
+  content: "\201c";
+  position: absolute;
+  left: 13px;
+  top: 5px;
+  margin: 0;
+  line-height: 1;
+  color: #fe4918;
+  font-size: 8rem;
+}
+footer.info-testimonial{
+  padding: 0;
+}
+footer.info-testimonial img{
+  float: left;
+  width: 20%;
+  border-radius: 50%;
+  margin-left: 20px;
+}
+footer.info-testimonial cite{
+  color: #fe4918;
+  text-align: center;
+  text-transform: uppercase; 
+  font-size: 20px;
+  padding-top:20px;
+  font-weight: bold;
+  width: 66.6%;
+  float: right;
+  font-size: normal;
+}
+@media only screen and (min-width:768px){
+  footer.info-testimonial cite{
+    font-size: 12px;
+    padding-top: 0px;
+    text-align: left;
+  }
+}
+@media only screen and (min-width:986px){
+  footer.info-testimonial cite{
+    padding-top: 15px;
+  }
+}
+footer.info-testimonial cite span{
+  text-transform: none;
+  color: black;
+  display: block;
+
+}
+/**********************NewsLetter********************************/
+div.newsletter{
+  position: relative;
+  height: auto;
+}
+div.newsletter:before{
+  background-image: url(../img/bg-newsletter.jpg);
+  content:'';
+}
+div.newsletter .contenido{
+  padding:100px 0;
+  color: white;
+  text-align: center;
+  position: relative;
+}
+div.newsletter .contenido p{
+  font-size: 1.2em;
+  text-transform: lowercase;
+}
+div.newsletter .contenido h3{
+  text-transform: uppercase;
+  font-size: 7vw;
+  font-family: 'PT Sans',sans-serif;
+  color: white;
+}
+/************************CUENTA REGRESIVA***********************************************/
+div.cuenta-regresiva ul li{
+  text-transform: uppercase;
+  font-family: 'Oswald',sans-serif;
+  text-align: center;
+  font-size: 1.6rem;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width:768px){
+  div.cuenta-regresiva ul li{
+    float: left;
+    width: 25%;
+  }
+}
+/************************FOOTER******************************************************/
+footer{
+  background-color: #353535;
+  padding-top: 40px;
+}
+footer .contenedor > div{
+  color: white;
+  padding-top: 0 20px;
+}
+@media only screen and (min-width:768px){
+  footer .contenedor > div{
+    float: left;
+    font-size: 12px;
+    padding: 0 20px;
+    width: 33.3%;
+  }
+}
+.footer-informacion p{
+  text-align: justify;
+}
+footer h3{
+  text-align: center;
+  color: white;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-family: 'Oswald',sans-serif;
+  margin-bottom: 20px;
+}
+footer h3 span{
+  color: #fe4918;
+}
+footer .ultimos-tweets li{
+  text-align: justify;
+  margin-bottom: 10px;
+}
+
+.copyright{
+  text-align: center;
+  margin: 0;
+  background-color: #2e2e2e;
+  padding: 10px 0;
+  color: white;
 }
 /* ==========================================================================
    Helper classes
