--- a/css/main.css
+++ b/css/main.css
@@ -920,6 +920,41 @@ div.resumen input{
   text-align: center;
   color: #fe4918;
 }
+
+/**************CALENDARIO********************************/
+div.calendario:after{
+  clear: both;
+  display: block;
+  content: '';
+}
+div.dia{
+  width: 50%;
+  float: left;
+  border: 2px solid #e1e1e1;
+}
+@media only screen and (min-width:768px){
+  div.dia{
+    width: 33%;
+    min-height: 240px;
+    padding-top: 20px;
+    transition: all .3s ease;
+  }
+}
+div.dia:hover{
+  background-color: #e1e1e1;
+}
+div.dia p.titulo{
+  color: #fe4918;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+div.dia p{
+  font-size: 1em;
+}
+div.dia i{
+  color: #fe4918;
+
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
