--- a/css/main.css
+++ b/css/main.css
@@ -922,6 +922,13 @@ div.resumen input{
 }
 
 /**************CALENDARIO********************************/
+div.calendario h3{
+  background-color: #fe4918;
+  color: white;
+  clear: both;
+  text-align: center;
+  padding: 10px 0;
+}
 div.calendario:after{
   clear: both;
   display: block;
@@ -931,6 +938,7 @@ div.dia{
   width: 50%;
   float: left;
   border: 2px solid #e1e1e1;
+  transition: all .3s ease;
 }
 @media only screen and (min-width:768px){
   div.dia{
@@ -942,6 +950,7 @@ div.dia{
 }
 div.dia:hover{
   background-color: #e1e1e1;
+  -webkit-transform: scale(1.1);
 }
 div.dia p.titulo{
   color: #fe4918;
@@ -953,7 +962,6 @@ div.dia p{
 }
 div.dia i{
   color: #fe4918;
-
 }
 /* ==========================================================================
    Helper classes
